--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,25 @@
 body{
     margin:0px;
     padding: 0px;
-    background: #2D2D2D;
-    color: #FFFFFF;
+
 }
 
+:root{
+    --background-color: #2D2D2D;
+    --headfoot-color: #0C70F2;
+    --foreground-color: green;
+    --primary-text-color: white;
+    --secondary-text-color: black;
+    --toggle-bg: grey;
+    --toggle-fg: rgb(105, 102, 102);
+}
+
+[bright-theme="bright"] {
+    --background-color: #f3f3f3;
+    --headfoot-color: #acdf95;
+    --foreground-color: blue;
+    --primary-text-color: #101f46;
+    --secondary-text-color: white;
+    --toggle-bg: #acdf95;
+    --toggle-fg: #101f46;
+}
